--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     // Dagger dependency
     implementation 'com.google.dagger:dagger:2.28.3'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.28.3'
+
+    // ViewModel
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
 }
